# internal/adapter/http/v1/role/request.go
@@ -5,3 +5,11 @@ type CreatedRequest struct {
 	Description string   `json:"description" binding:"required" example:"this is for admin role"`
 	Permissions []string `json:"permissions" binding:"required" example:"read:all,write:all"`
 }
+
+type ListGotInput struct {
+	Limit      int      `json:"limit" form:"limit" binding:"required"`
+	Offset     int      `json:"offset" form:"offset"`
+	FilterName string   `json:"filterName" form:"filterName"`
+	SortFields []string `json:"sortFields" form:"sortFields"`
+	Dir        string   `json:"dir" form:"dir"`
+}
